--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,9 +10,51 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
+
  *= require_self
  */
+
+ html, body, header, nav, h1, a,
+ ul, li, strong, main, button, i,
+ section, img, div, h2, p, form,
+ fieldset, label, input, textarea,
+ span, article, footer, time, small {
+   margin: 0;
+   padding: 0;
+   // border: 0;
+   // outline: 0;
+   font: inherit;
+   color: inherit;
+   text-align: inherit;
+   text-decoration: inherit;
+   vertical-align: inherit;
+   box-sizing: inherit;
+   background: transparent;
+ }
+
+ ul {
+   list-style: none;
+ }
+
+ img {
+   display: block;
+   width: 100%;
+   height: auto;
+ }
+
+ input,
+ textarea,
+ button {
+   border: none;
+ }
+
+ button,
+ input[type="submit"] {
+   cursor: pointer;
+ }
+
+
+ @import 'reset.scss'
  body {
     font-family: 'Abel', sans-serif;
   }
@@ -22,6 +64,8 @@
   justify-content: space-between;
   margin: auto;
   margin-right: 0px;
+  padding: 15px;
+  font-family: 'Abel', sans-serif;
   /* position: fixed;
   right: 10px;
   top: 10px; */
@@ -30,12 +74,29 @@
 .login-signup-button {
   margin: auto;
   margin-right: 0px;
+  font-family: 'Abel', sans-serif;
+
+}
+
+.login-form-container {
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
 
 
 .header-group {
   display: flex;
   justify-content: space-between;
+  align-items: baseline;
+  padding: 20px;
+}
+
+.header-name-button {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  margin-right: 0px;
 }
 
 .header-button {
@@ -43,10 +104,44 @@
   margin-right: 0px;
 }
 
+.session-form-input {
+  color: black;
+  margin-top: 10px;
+  border-width: 10px;
+  border: 1px solid gray;
+  border-style: solid;
+  width: 100px;
+  height: 20px;
+  text-align: left;
+  border-radius: 5px;
+
+}
+
+.session-question {
+  font-family: 'Abel', sans-serif;
+  font-size: 12px;
+}
 .session-errors {
   color: red;
 }
 
+.landing-page {
+  background-image: url(https://www.banfflakelouise.com/sites/default/files/styles/l_1600_natural/public/canoeing_bow_lake_noel_hendrickson_3_horizontal.jpg?itok=2PiMOrY6);
+  height: calc(100vh);
+  background-position: center;
+  background-size: cover;
+  max-width: 100%;
+
+  width: 100%;
+
+
+}
+
+.hipcamp-logo {
+  text-decoration: none;
+  color: green;
+  font-size: 20px;
+}
 
 
 .login-form-container {
@@ -69,6 +164,8 @@
   padding: 20px;
   background: white;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 
@@ -87,6 +184,11 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-family: 'Abel', sans-serif;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .close-x {
