--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -240,3 +240,13 @@
   height: 500px;
   background-color: blue;
 }
+
+.listing-photo {
+  width: 500px;
+  height: 500px;
+}
+
+h1 {
+  font-family: 'Abel', sans-serif;
+  font-size: 20px;
+}
