--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -162,15 +162,27 @@
 }
 
 .landing-page {
-  background-image: url(https://www.banfflakelouise.com/sites/default/files/styles/l_1600_natural/public/canoeing_bow_lake_noel_hendrickson_3_horizontal.jpg?itok=2PiMOrY6);
-  height: 500px;
-  background-position: center;
-  background-size: cover;
-  max-width: 100%;
+  display: flex;
+  justify-content: space-between;
 
-  width: 100%;
+}
 
+.landing-page-title {
+  margin-left: 15px;
+  font-size: 20px;
+  font-weight: 400;
+}
 
+.landing-page-image {
+  max-width: 700px;
+  height: 600px;
+  margin-right: 60px;
+  margin-bottom: 30px;
+}
+
+.index-to-listings {
+  color: blue;
+  font-size: 20px;
 }
 
 .hipcamp-logo {
@@ -236,9 +248,11 @@
 }
 
 .map {
-  width: 400px;
-  height: 400px;
+  width: 500px;
+  height: 500px;
+  margin-right: 70px;
   background-color: blue;
+  margin-top: 30px;
 }
 
 .listing-index {
@@ -248,6 +262,9 @@
   border-top: 3px solid #333333;
   line-height: 1.1;
   margin-top: 0;
+  margin-left: 90px;
+  font-family: 'Abel', sans-serif;
+  font-size: 18px;
 }
 
 .listing-photo {
@@ -273,8 +290,39 @@ h2 {
 .search {
   display: flex;
   justify-content: space-between;
-  margin: 17px;
+  margin-left: 17px;
 
+}
+
+
+
+
+
+.listing-index-li {
+  margin-bottom: 30px;
+}
+
+.listing-index-name {
+  margin-top: 10px;
+}
+
+.listing-index-details {
+  font-family: 'Abel', sans-serif;
+  font-size: 15px;
+  margin-left: 30px;
+}
+
+.address-and-cost {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.daily-cost {
+  margin-right: 130px;
+  font-weight: bold;
 }
 
 .listing-show-container {
@@ -285,9 +333,47 @@ h2 {
 .listing-show-carousel {
   display: flex;
   max-width: 100%;
+  justify-content: center;
+
 }
 
 .listing-show-photos {
   display: flex;
   margin-right: 100px;
+}
+
+.listing-show-details {
+  align-items: center;
+}
+
+.listing-show-name {
+  margin-top: 10px;
+  margin-left: 80px;
+  max-width: 300px;
+  color: blue;
+  font-size: 30px;
+  border-bottom: 2px solid #333333;
+  margin-bottom: 10px;
+}
+
+.listing-show-description {
+  margin-left: 80px;
+  max-width: 300px;
+  font-family: 'Abel', sans-serif;
+  font-size: 15px;
+}
+
+.listing-description-booking {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  margin-bottom: 40px;
+  margin-left: 80px;
+  margin-right: 180px;
+  font-family: 'Abel', sans-serif;
+  font-size: 15px;
+}
+
+.listing-show-details {
+  color: gray;
 }
