--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -176,10 +176,12 @@
 }
 
 .landing-page-image {
-  max-width: 700px;
-  height: 600px;
+  max-width: 400px;
+  height: 300px;
   margin-right: 60px;
   margin-bottom: 30px;
+  border-radius: 4px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 }
 
 .index-to-listings {
