Add date parsing

--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -9,3 +9,14 @@
 .check-in-out-label {
   padding-right: 10px;
 }
+
+.user-booking-container {
+  display: flex;
+  margin-bottom: 40px;
+  margin-left: 40px;
+  margin-top: 20px;
+}
+
+.booking-details {
+  margin-left: 20px;
+}
