Start on Review feature

--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -15,8 +15,14 @@
   margin-bottom: 40px;
   margin-left: 40px;
   margin-top: 20px;
+  font-family: 'Abel', sans-serif;
+  font-size: 15px;
+}
+
+.booking-listing-name {
+  font-size: 18px;
 }
 
 .booking-details {
-  margin-left: 20px;
+  margin-left: 25px;
 }
