Continue listing and booking styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -374,9 +374,9 @@ h2 {
   margin-top: 10px;
   margin-left: 80px;
   max-width: 300px;
-  color: blue;
-  font-size: 20px;
-  border-bottom: 2px solid #333333;
+  color: #333333;
+  font-size: 16px;
+  border-bottom: 2px solid rgb(229, 229, 229);
   margin-bottom: 10px;
 }
 
