--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -7,6 +7,10 @@
 
 }
 
+.user-booking {
+  border-bottom: 2px solid rgb(229, 229, 229);
+}
+
 .check-in-out {
   display: flex;
   padding: 10px;
@@ -33,9 +37,29 @@
   font-size: 18px;
 }
 
+.booking-detail-labels {
+  margin-top: 30px;
+  margin-left: 20px;
+  font-family: Helvetica;
+
+  li {
+    margin-bottom: 10px;
+  }
+}
+
+
 .booking-details {
   margin-left: 25px;
+  margin-top: 30px;
+  font-family: Helvetica;
+
+  li {
+    margin-bottom: 10px;
+  }
+
 }
+
+
 
 .book-now-button {
   max-width: 500px;
@@ -52,4 +76,23 @@
   height: 20px;
   margin-left: 10px;
   margin-bottom: 10px;
+}
+
+.user-booking-delete {
+  text-transform: capitalize;
+  border: 1px solid gray;
+  font-family: Helvetica;
+  margin-top: 10px;
+  font-size: 15px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  border-radius: 5px;
+  background-color: rgb(64, 217, 172);
+  color: white;
+  width: 170px;
+  padding-left: 5px;
+}
+
+.booking-status{
+  font-weight: bold;
 }
