--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -1,9 +1,11 @@
 .booking-container-form {
   color: blue;
-  font-size: 15px;
+  font-size: 13px;
   border-radius: 3px;
-  border: 1px solid gray;
-
+  border: 1px solid rgb(229, 229, 229);
+  width:  390px;
+  margin-right: 15px;
+  box-shadow: 0px 0px 2px rgb(229, 229, 229);
 }
 
 .user-booking {
@@ -62,13 +64,13 @@
 
 .book-now-button {
   width: 95%;
-  border: 1px solid gray;
+  border: 1px grey;
   font-family: Helvetica;
   margin-top: 10px;
   font-size: 15px;
   padding-top: 3px;
   padding-bottom: 3px;
-  border-radius: 5px;
+  border-radius: 3px;
   background-color: rgb(64, 217, 172);
   color: white;
   height: 30px;
@@ -77,6 +79,7 @@
   margin-right: 0px;
   text-align: center;
   padding-right: 0px;
+
 }
 
 .user-booking-delete {
