add more styling to booking and review

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -445,7 +445,7 @@ h2 {
   margin-top: 10px;
   margin-left: 80px;
   max-width: 300px;
-  font-size: 20px;
+  font-size: 18px;
   border-bottom: 1px solid rgb(229, 229, 229);
   margin-bottom: 10px;
   margin-right: 80px;
@@ -457,13 +457,13 @@ h2 {
   margin-left: 80px;
   max-width: 500px;
   padding: 5px;
-  border: 1px solid gray;
+  border: 1px grey;
   font-family: Helvetica;
   margin: 10px;
   font-size: 15px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  border-radius: 5px;
+  // padding-top: 3px;
+  // padding-bottom: 3px;
+  border-radius: 3px;
   background-color: rgb(64, 217, 172);
   color: white;
   height: 20px;
