--- a/app/assets/stylesheets/create-review.scss
+++ b/app/assets/stylesheets/create-review.scss
@@ -29,14 +29,14 @@
   font-family: Helvetica;
 }
 .create-review-submit {
-  max-width: 500px;
+  max-width: 100px;
   padding: 5px;
-  border: 1px solid gray;
+  border: 1px grey;
   font-family: Helvetica;
   font-size: 15px;
   padding-top: 3px;
   padding-bottom: 3px;
-  border-radius: 5px;
+  border-radius: 3px;
   background-color: rgb(64, 217, 172);
   color: white;
   height: 20px;
