--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -1,11 +1,11 @@
 .booking-container-form {
-  color: blue;
   font-size: 13px;
   border-radius: 3px;
   border: 1px solid rgb(229, 229, 229);
   width:  390px;
   margin-right: 15px;
   box-shadow: 0px 0px 2px rgb(229, 229, 229);
+  color: rgb(51, 51, 51)
 }
 
 .user-booking {
@@ -17,12 +17,26 @@
   padding: 10px;
 }
 
+.check-in-container {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.check-out-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .form-input {
   width: 50px;
 }
 
 .check-in-out-label {
   padding-right: 10px;
+  padding-bottom: 5px;
+  font-weight: bold;
+
 }
 
 .user-booking-container {
@@ -60,6 +74,12 @@
 
 }
 
+.guests-label {
+  font-weight: bold;
+  border-bottom: 1px solid rgb(229, 229, 229);
+  border-top: 1px solid rgb(229, 229, 229);
+}
+
 
 
 .book-now-button {
@@ -84,7 +104,6 @@
 
 .user-booking-delete {
   text-transform: capitalize;
-  border: 1px solid gray;
   font-family: Helvetica;
   margin-top: 10px;
   font-size: 15px;
@@ -96,6 +115,7 @@
   width: 170px;
   padding-left: 5px;
   padding-right: 0px;
+  border: 1px grey;
 }
 
 .booking-status{
