--- a/app/assets/stylesheets/review.scss
+++ b/app/assets/stylesheets/review.scss
@@ -13,17 +13,20 @@
   font-family: Helvetica;
   font-size: 16px;
   font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .review-user-created-date {
   font-family: Helvetica;
   font-size: 14px;
-  color: rgb(194, 194, 194)
+  color: rgb(194, 194, 194);
+  margin-bottom:10px;
 }
 
 .review-user-description {
   font-family: Helvetica;
   font-size: 14px;
+  margin-bottom:10px;
 }
 
 .review-item-values {
