--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -5,7 +5,8 @@
   width: 390px;
   margin-right: 15px;
   box-shadow: 0px 0px 2px rgb(229, 229, 229);
-  color: rgb(51, 51, 51)
+  color: rgb(51, 51, 51);
+  display: flex;
 }
 
 .user-booking {
@@ -80,10 +81,15 @@
   border-top: 1px solid rgb(229, 229, 229);
 }
 
+.booking-guests {
+  display: flex;
+  justify-content: space-between;
+}
+
 
 
 .book-now-button {
-  width: 95%;
+  width: 390px;
   border: 1px grey;
   font-family: Helvetica;
   margin-top: 10px;
@@ -96,7 +102,7 @@
   height: 30px;
   margin-left: 10px;
   margin-bottom: 10px;
-  margin-right: 0px;
+  margin-right: 40%;
   text-align: center;
   padding-right: 0px;
 
