--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -9,7 +9,7 @@
   margin-top: 40px;
   margin-left: 70px;
   margin-bottom: 15px;
-  font-size: 54px;
+  font-size: 42px;
   font-weight: 400;
   color: rgb(51, 51, 51);
   box-sizing: border-box;
@@ -21,6 +21,8 @@
   max-width: 300px;
   color: #a1a1a1;
   font-family: Helvetica;
+  font-weight: 300;
+  line-height: 24px;
 
   strong {
     font-weight: bold;
@@ -28,8 +30,12 @@
 }
 
 .index-to-listings {
-  font-size: 25px;
-  color: rgb(51, 51, 51)
+  font-size: 26px;
+  color: #333333;
+  font-weight: 700;
+  line-height: 30px;
+  font-family: Helvetica;
+  text-align: center;
 }
 
 .landing-page-image {
@@ -40,12 +46,12 @@
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 }
 
-.discover-camping {
-  margin-left: 450px;
-  font-family: Helvetica;
-  color: rgb(51, 51, 51);
-  margin-bottom: 100px;
-}
+// .discover-camping {
+//   margin-left: 450px;
+//   font-family: Helvetica;
+//   color: rgb(51, 51, 51);
+//   margin-bottom: 100px;
+// }
 
 .first-row-filters {
   margin-top: 50px;
