--- a/app/assets/stylesheets/review.scss
+++ b/app/assets/stylesheets/review.scss
@@ -12,21 +12,25 @@
 .review-user-name {
   font-family: Helvetica;
   font-size: 16px;
-  font-weight: bold;
-  margin-bottom: 10px;
+  font-weight: 600;
+  margin-bottom: 4px;
+
 }
 
 .review-user-created-date {
   font-family: Helvetica;
-  font-size: 14px;
+  font-size: 12px;
   color: rgb(194, 194, 194);
   margin-bottom:10px;
+  font-weight: 200px;
 }
 
 .review-user-description {
   font-family: Helvetica;
   font-size: 14px;
   margin-bottom:10px;
+  line-height: 24px;
+  font-weight: 200px;
 }
 
 .review-item-values {
@@ -34,9 +38,9 @@
   max-width: 800px;
 }
 
-.review-item-values li {
-  margin-bottom: 10px;
-}
+// .review-item-values li {
+//   margin-bottom: 10px;
+// }
 
 .edit-review-link {
   margin-top: 10px;
@@ -50,7 +54,7 @@
   padding-top: 3px;
   padding-bottom: 3px;
   border-radius: 3px;
-  background-color: rgb(64, 217, 172);
+  background-color: #6fdfaf;
   color: white;
   height: 20px;
 }
@@ -67,7 +71,7 @@
   padding-top: 3px;
   padding-bottom: 3px;
   border-radius: 3px;
-  background-color: rgb(64, 217, 172);
+  background-color: #6fdfaf;
   color: white;
   height: 20px;
 }
