--- a/app/assets/stylesheets/create-review.scss
+++ b/app/assets/stylesheets/create-review.scss
@@ -5,7 +5,7 @@
 
 .create-review-listing-name {
   font-size: 30px;
-  font-family: Helvetica;
+  font-family: "Lato", Helvetica;
   margin-bottom: 10px;
 }
 
@@ -17,7 +17,7 @@
 
 .create-review-date {
   margin-bottom: 20px;
-  font-family: Helvetica;
+  font-family: "Lato", Helvetica;
 }
 
 .description {
@@ -26,13 +26,13 @@
   padding: 10px;
   padding-bottom: 150px;
   margin-bottom: 20px;
-  font-family: Helvetica;
+  font-family: "Lato", Helvetica;
 }
 .create-review-submit {
   max-width: 100px;
   padding: 5px;
   border: 1px grey;
-  font-family: Helvetica;
+  font-family: "Lato", Helvetica;
   font-size: 15px;
   padding-top: 3px;
   padding-bottom: 3px;
