--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -20,7 +20,7 @@
   margin-left: 70px;
   max-width: 300px;
   color: #a1a1a1;
-  font-family: Helvetica;
+  font-family: "Lato", Helvetica;
   font-weight: 300;
   line-height: 24px;
 
@@ -34,7 +34,7 @@
   color: #333333;
   font-weight: 700;
   line-height: 30px;
-  font-family: Helvetica;
+  font-family: "Lato", Helvetica;
   text-align: center;
 }
 
@@ -48,7 +48,7 @@
 
 // .discover-camping {
 //   margin-left: 450px;
-//   font-family: Helvetica;
+//   font-family: "Lato", Helvetica;
 //   color: rgb(51, 51, 51);
 //   margin-bottom: 100px;
 // }
