--- a/app/assets/stylesheets/review.scss
+++ b/app/assets/stylesheets/review.scss
@@ -10,7 +10,7 @@
 
 
 .review-user-name {
-  font-family: Helvetica;
+  font-family: "Lato", Helvetica;
   font-size: 16px;
   font-weight: 600;
   margin-bottom: 4px;
@@ -18,7 +18,7 @@
 }
 
 .review-user-created-date {
-  font-family: Helvetica;
+  font-family: "Lato", Helvetica;
   font-size: 12px;
   color: rgb(194, 194, 194);
   margin-bottom:10px;
@@ -26,7 +26,7 @@
 }
 
 .review-user-description {
-  font-family: Helvetica;
+  font-family: "Lato", Helvetica;
   font-size: 14px;
   margin-bottom:10px;
   line-height: 24px;
@@ -48,7 +48,7 @@
   max-width: 500px;
   padding: 5px;
   border: 1px grey;
-  font-family: Helvetica;
+  font-family: "Lato", Helvetica;
   margin: 10px;
   font-size: 15px;
   padding-top: 3px;
@@ -65,7 +65,7 @@
   max-width: 500px;
   padding: 5px;
   border: 1px grey;
-  font-family: Helvetica;
+  font-family: "Lato", Helvetica;
   margin: 10px;
   font-size: 15px;
   padding-top: 3px;
