more more more more styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,8 +75,12 @@ body {
   justify-content: space-between;
   margin: auto;
   margin-right: 0px;
-  padding: 15px;
-  height: 28px;
+  padding-top: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 15px;
+
+  height: 18px;
   color: #333333;
   // border-bottom: 1px solid #ebebeb;
 
@@ -103,6 +107,17 @@ body {
 .header-name {
   padding-top: 1px;
   font-family: 'Lato';
+  font-size: 15px;
+  font-weight: normal;
+}
+
+.signup-button {
+  font-size: 15px;
+}
+
+.login-button {
+  font-size: 15px;
+  margin-left: 8px;
 }
 
 .header-name-button {
@@ -137,13 +152,12 @@ body {
 
 .hipcamp-logo {
   text-decoration: none;
-  color: rgb(51, 51, 51)
-  font-size 20px;
-  font-family: "Lato", Helvetica;
+  color: #333333;
   font-weight: 600;
   width: 135px;
-  line-height: 22.72px;
   letter-spacing: 3px;
+  margin-left: 15px;
+  font-size: 18px;
 }
 
 
@@ -152,8 +166,9 @@ body {
 .header-button {
   margin: auto;
   margin-right: 0px;
+  margin-left: 8px;
   font-size: 15px;
-  color: #333333;
+
 }
 
 .session-welcome-header {
