--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
 }
 
+.please {
+  display: flex;
+  flex-grow: column;
+}
 
 .booking-container-form {
   font-size: 13px;
