--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -5,7 +5,21 @@
 
 .please {
   display: flex;
-  flex-grow: column;
+  flex-direction: column;
+}
+
+.minusplusguests{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  line-height: 22px;
+  font-weight: normal;
+  font-size: 13px;
+}
+
+.minus {
+  font-weight: bold;
+  font-size: 15px;
 }
 
 .booking-container-form {
@@ -17,6 +31,7 @@
   box-shadow: 0px 0px 2px rgb(229, 229, 229);
   color: rgb(51, 51, 51);
   display: flex;
+  justify-content: center;
 }
 
 .user-booking {
@@ -26,6 +41,7 @@
 .check-in-out {
   display: flex;
   padding: 10px;
+  justify-content: center;
 }
 
 .check-in-container {
@@ -110,7 +126,6 @@
   background-color: rgb(64, 217, 172);
   color: white;
   height: 30px;
-  margin-left: 10px;
   margin-bottom: 10px;
   margin-right: 40%;
   text-align: center;
