--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -325,7 +325,7 @@ body {
   height: 300px;
   box-sizing: border-box;
   border-radius: 4px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.1);
   margin-top: 10px;
   font-weight: 400px;
   padding-right: 15px;
